
- Job prioritisation - You can click and drag to set different levels of priority for all jobs in the world, and also on items of furniture that produce jobs
- The crafting management screen also allows you to set a priority on each crafting recipe of disabled, low, normal or high
- The crafting management screen also allows you to select a material to be used for each recipe input item
- Updated assets for constructed walls
- Added a placeholder sprite to be used if any sprites are missing

Alpha 4.1 - 2nd November 2020

- Crafting management - the player can now control how many of each item (or liquid!) is to be produced
- Now correctly cancelling outstanding farming jobs when crop type is changed
- Made music a bit quieter overall

Alpha 4.0.3 - 1st November 2020

- Fix for a crash that can occur when a beer tapper contains an item without liquid inside it

Alpha 4.0.2 - 26th October 2020

- Tiny fix for a crash due to programming error in the previous update

Alpha 4.0.1 - 25th October 2020

- Adjusted starting seed amounts (barley and hops) so beer will last longer into the next wave of immigrants
- Corrected crash caused by translated special string in French translation
- Fixed a pathfinding bug where workspaces could be open but not path-found to, so job workspaces are now tried in a random order
- Added missing beer tapper state descriptions

Alpha 4 - 19th October 2020

- Brewing beer is here! Includes new "brewer" profession and brewery room type with plenty of new furniture and items
- Liquid containers such as buckets are now used correctly if they already contain a liquid i.e. will be used to fill barrels, or ignored otherwise
- The types and quantity of seeds on game start are now fixed rather than random
- Constructions no longer lock material types until all are available
- Fixed the Linux distribution - apologies this has been broken a while - with many thanks to community member gammelget / @falkowich